# afina

include/afina/lockfree/: applier.h  flatcombine.h  thread_local.h
include/afina/network/: Server.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Debug.h  FileDescriptor.cpp  FileDescriptor.h  ThreadPool.cpp  ThreadPool.h
src/coroutine/: Engine.cpp
src/lockfree/: CMakeLists.txt  applier.cpp  thread_local.cpp
src/network/: CMakeLists.txt
src/network/blocking/: ServerImpl.cpp  ServerImpl.h
src/network/core/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/network/nonblocking/: ServerImpl.cpp  ServerImpl.h  Worker.cpp  Worker.h
src/network/uv/: ServerImpl.cpp
src/pipes/: CMakeLists.txt  FIFOServer.cpp  FIFOServer.h
src/pipes/core/: FIFO.cpp  FIFO.h
src/protocol/: Executor.cpp  Executor.h
src/storage/: List.h  List.hpp  MapBasedGlobalLockImpl.cpp  MapBasedGlobalLockImpl.h
test/storage/: StorageTest.cpp
